To View UnitTests

--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,7 @@
     "start": "nodemon server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "jest -w=1 --coverage --detectOpenHandles --detectLeaks",
+    "test": "jest -w=1 --coverage --detectOpenHandles",
     "debug-test": "jest -w=1 --coverage --detectOpenHandles",
     "build": "tsc",
     "start:prod": "node ./dist/server.js",
